--- a/results-summary-component-main/style.css
+++ b/results-summary-component-main/style.css
@@ -29,7 +29,7 @@ body {
   background-color: rgb(201, 207, 245);
   min-height: 100vh;
 }
-.conteiner {
+.container {
   width: 736px;
   height: 513px;
   border-radius: 15px;
@@ -186,4 +186,80 @@ body {
     hsl(252, 100%, 67%),
     hsl(241, 81%, 54%)
   );
+}
+
+@media (max-width: 768px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    height: auto;
+  }
+
+  .sect {
+    width: 100%;
+    padding: 20px;
+  }
+
+  .izq {
+    padding: 10px 0;
+  }
+
+  .circle1 {
+    height: 150px;
+    width: 150px;
+  }
+
+  .izq h4 {
+    font-size: 24px;
+  }
+
+  .izq .texto {
+    font-size: 16px;
+    padding: 20px;
+  }
+
+  .btn {
+    width: 90%;
+  }
+}
+
+@media (max-width: 375px) {
+  body {
+    font-size: 16px;
+  }
+
+  .container {
+    width: 100%;
+    margin: 0;
+    height: auto;
+    border-radius: 0;
+  }
+
+  .der {
+    border-radius: 0 0 20px 20px;
+  }
+
+  .circle1 {
+    height: 120px;
+    width: 120px;
+  }
+
+  .izq h2,
+  .der h2 {
+    font-size: 18px;
+  }
+
+  .izq h4 {
+    font-size: 20px;
+  }
+
+  .btn {
+    width: 100%;
+    font-size: 16px;
+  }
+
+  .sect {
+    padding: 10px;
+  }
 }
